# mesh-editor

./: .clang-format  CMakeLists.txt  main.cpp  test2.ifc
src/import/ifc/: Factory.cpp  Factory.h  Lexer.h  Parser.cpp  Parser.h  entity_factory.cpp  entity_factory.h  factory.cpp  factory.h  lexer.h  parser.cpp  parser.h  token.h
src/import/ifc/classes/: Entities.h  Types.h  entities.h  types.h  utility.h
src/utility/: BumpPtrAllocator.h  MemTrackAllocator.cpp  MemTrackAllocator.h  SmallQueue.h  SmallVector.h  ThreadPool.h  allocator.h
tools/: EntitiesTemplate.h  FactoryTemplate.cpp  ForwardTemplate.h  PointersTemplate.h  TypesTemplate.h  generator.py  ifcparser.py
